--- a/src/styles/index/_button.scss
+++ b/src/styles/index/_button.scss
@@ -1,12 +1,12 @@
 .btn {
   display: inline-block;
   width: 200px;
-  padding: 15px 0;
-  background-color: skyblue;
+  padding: 12px 0;
+  border: 1px solid #fff;
   text-align: center;
   font-size: 20px;
   color: #fff;
-  border-radius: 5px;
+  border-radius: 3px;
   cursor: pointer;
   position: absolute;
   top: 50%;
