--- a/src/styles/index/_button.scss
+++ b/src/styles/index/_button.scss
@@ -1,3 +1,9 @@
+.section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
 .btn {
   display: inline-block;
   width: 200px;
@@ -13,3 +19,4 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
