--- a/src/styles/index/_svg.scss
+++ b/src/styles/index/_svg.scss
@@ -1,17 +1,18 @@
 .svg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
+  z-index: -1;
 }
 
 .content {
-  position: relative;
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   padding: 20px;
@@ -19,7 +20,7 @@
   z-index: 1;
   overflow: scroll;
   &__text {
-    &:not(:last-child) {
+    &:not(:last-of-type) {
       margin-bottom: 20px;
     }
   }
