--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,8 +8,10 @@
 // common
 
 // index
+@import 'index/section';
 @import 'index/button';
 @import 'index/svg';
+@import 'index/content';
 // index
 
 // modules
