--- a/src/index.pug
+++ b/src/index.pug
@@ -4,17 +4,21 @@ block title
   title open-animation-sample
 
 block body
-  - var i = 0;
-  - var sections = ['about', 'works', 'contact'];
-  while i < 3
-    section.section(class=`${sections[i]}`)
+  - var sections = [];
+  - sections[0] = {heading: 'about', image: 'Xo4YvBp6IBM'};
+  - sections[1] = {heading: 'works', image: 'NsWcRlBT_74'};
+  - sections[2] = {heading: 'contact', image: 'Iejlk43vR2I'};
+  each section in sections
+    section.section(class=`${section.heading}`)
       .content.js-content
-        - var j = 0;
-        while j < 40
-          p.content__text= sections[i]
-          - j++
-        span.content__close.js-close
+        .content__container
+          h2.content__heading= section.heading
+          - var j = 0;
+          while j < 3
+            img(src=`https://source.unsplash.com/${section.image}`)
+            p.content__text Amet maiores quam assumenda iusto nulla! Nihil nisi eius non distinctio voluptate vitae, odio id aperiam Doloremque unde quam hic qui omnis impedit quisquam corporis unde, architecto, magni Id earum
+            - j++
+          span.content__close.js-close
       a.btn.js-btn(href="#") read more
-    - i++
 
   svg#svg.svg
