--- a/src/styles/index/_content.scss
+++ b/src/styles/index/_content.scss
@@ -42,12 +42,21 @@
       width: 100%;
       height: 1px;
       background-color: red;
+      transition: all .3s;
     }
     &::before {
       transform: translate(-50%, -50%) rotate(45deg);
     }
     &::after {
       transform: translate(-50%, -50%) rotate(-45deg);
+    }
+    &:hover {
+      &::before {
+        transform: translate(-50%, -50%) rotate(-45deg);
+      }
+      &::after {
+        transform: translate(-50%, -50%) rotate(45deg);
+      }
     }
   }
 }
