--- a/src/layout.pug
+++ b/src/layout.pug
@@ -27,5 +27,5 @@ html(lang="ja")
     // endbuild
     // build:js scripts/main.js
     // script(type="text/paperscript" canvas="canvas" src='scripts/effect-1.js')
-    script(src='scripts/effect-1.js')
+    script(src='scripts/open-animation.js')
     // endbuild
