Add hover.css to button effect

--- a/src/index.pug
+++ b/src/index.pug
@@ -19,6 +19,7 @@ block body
             p.content__text Amet maiores quam assumenda iusto nulla! Nihil nisi eius non distinctio voluptate vitae, odio id aperiam Doloremque unde quam hic qui omnis impedit quisquam corporis unde, architecto, magni Id earum
             - j++
           span.content__close.js-close
-      a.btn.js-btn(href="#") read more
+      .section__btn
+        a.btn.js-btn.hvr-buzz-out(href="#") read more
 
   svg#svg.svg
