--- a/src/layout.pug
+++ b/src/layout.pug
@@ -11,6 +11,7 @@ html(lang="ja")
     meta(name='format-detection', content='telephone=no')
     // build:css styles/vendor.css
     // bower:css
+    link(rel='stylesheet', href='../bower_components/hover/css/hover.css')
     // endbower
     // endbuild
     // build:css styles/main.css
