--- a/src/styles/index/_section.scss
+++ b/src/styles/index/_section.scss
@@ -2,5 +2,11 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  &__btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
